--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 --accent-blue: #0072ff;
 --accent-blue-dark: #0056cc;
 --accent-white: #ffffff;
---accent-gradient: linear-gradient(135deg, rgba(0, 114, 255, 0.95), rgba(100, 180, 255, 0.9), rgba(255, 255, 255, 0.95));
 --accent-solid: #0072ff;
 --accent-red: #ff5252;
 --accent-green: #69f0ae;
@@ -53,11 +52,11 @@ box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 width: 40px;
 height: 40px;
 border-radius: 50%;
-background: var(--accent-gradient);
+background: rgba(0, 114, 255, 0.9);
 display: flex;
 align-items: center;
 justify-content: center;
-color: #000;
+color: #fff;
 font-weight: bold;
 font-size: 18px;
 cursor: pointer;
@@ -136,15 +135,33 @@ text-align: center;
 cursor: pointer;
 padding: 4px 2px;
 user-select: none;
+position: relative;
 }
 .panel-item i {
 font-size: 1.2rem;
 }
 .panel-item.active {
 color: #ffffff;
-text-shadow: 0 0 10px rgba(0, 114, 255, 0.6);
 }
-/* Неоморфические кнопки — синие с градиентом */
+/* NEW badge animation */
+.new-badge {
+position: absolute;
+top: -2px;
+right: -4px;
+background: linear-gradient(135deg, #ff3366, #ff6b6b);
+color: white;
+font-size: 0.6rem;
+font-weight: bold;
+padding: 2px 5px;
+border-radius: 8px;
+animation: pulse 1.5s ease-in-out infinite;
+box-shadow: 0 2px 6px rgba(255, 51, 102, 0.4);
+}
+@keyframes pulse {
+0%, 100% { transform: scale(1); opacity: 1; }
+50% { transform: scale(1.15); opacity: 0.85; }
+}
+/* Неоморфические кнопки — синий матовый стеклянный */
 .neu-btn {
 background: var(--card);
 border: none;
@@ -163,16 +180,17 @@ gap: 8px;
 box-shadow: inset -2px -2px 5px var(--shadow-dark), inset 2px 2px 5px var(--shadow-light);
 }
 .neu-btn-accent {
-background: var(--accent-gradient);
-color: #000;
+background: rgba(0, 114, 255, 0.85);
+color: #fff;
 box-shadow:
-inset 2px 2px 5px rgba(0, 114, 255, 0.3),
-inset -2px -2px 5px rgba(255, 255, 255, 0.3);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
+inset 2px 2px 5px rgba(0, 86, 204, 0.4),
+inset -2px -2px 5px rgba(100, 180, 255, 0.3);
+backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
+border: 1px solid rgba(255, 255, 255, 0.15);
 }
 .neu-btn-accent:hover {
-background: linear-gradient(135deg, rgba(0, 114, 255, 1), rgba(100, 180, 255, 1), rgba(255, 255, 255, 1));
+background: rgba(0, 114, 255, 0.95);
 }
 .neu-input,
 .neu-select {
@@ -196,11 +214,12 @@ position: relative;
 .progress-fill {
 height: 100%;
 border-radius: 12px;
-background: var(--accent-gradient);
+background: rgba(0, 114, 255, 0.85);
 width: 0;
 transition: width 1.2s cubic-bezier(0.22, 0.61, 0.36, 1);
 position: relative;
 backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
 }
 .bar-container {
 height: 28px;
@@ -211,11 +230,12 @@ box-shadow: inset 2px 2px 5px var(--shadow-dark), inset -2px -2px 5px var(--shad
 }
 .bar-fill {
 height: 100%;
-background: var(--accent-gradient);
+background: rgba(0, 114, 255, 0.85);
 border-radius: 14px;
 width: 0;
 transition: width 1.4s cubic-bezier(0.22, 0.61, 0.36, 1);
 backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
 }
 .status-bar {
 display: flex;
@@ -264,25 +284,16 @@ border: 1px solid var(--border);
 font-size: 1.2rem;
 font-weight: 600;
 margin-bottom: 16px;
-background: var(--accent-gradient);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-background-clip: text;
+color: var(--accent-blue);
 }
 .orders-table { width: 100%; border-collapse: collapse; margin-top: 16px; }
 .orders-table th, .orders-table td { padding: 12px 8px; text-align: left; border-bottom: 1px solid var(--border); }
 .orders-table th { 
-    background: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+    color: var(--accent-blue);
     font-weight: 600; 
 }
 .orders-table .amount { 
-    background: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+    color: var(--accent-blue);
     font-weight: 600; 
 }
 .empty-msg { text-align: center; color: var(--text-muted); padding: 20px; font-style: italic; }
@@ -300,8 +311,8 @@ cursor: pointer;
 box-shadow: inset 1px 1px 3px var(--shadow-dark), inset -1px -1px 3px var(--shadow-light);
 }
 .action-btn:hover {
-background: var(--accent-gradient);
-color: #000;
+background: rgba(0, 114, 255, 0.85);
+color: #fff;
 }
 .hidden { display: none !important; }
 
@@ -349,9 +360,10 @@ color: #000;
     box-shadow: 0 0 10px rgba(0, 114, 255, 0.3);
 }
 .calendar-day.worked {
-    background: var(--accent-gradient);
-    color: #000;
+    background: rgba(0, 114, 255, 0.85);
+    color: #fff;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 .calendar-day.weekend {
     opacity: 0.7;
@@ -551,7 +563,7 @@ padding: 0 8px;
 <!-- Предзаказы -->
 <div id="preorders" class="content-block">
 <div class="container">
-<h2 style="background: var(--accent-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 16px;"><i class="fas fa-clock"></i> Предзаказы</h2>
+<h2 style="color: var(--accent-blue); margin-bottom: 16px;"><i class="fas fa-clock"></i> Предзаказы</h2>
 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin-bottom: 20px;">
 <div>
 <label style="display: block; margin-bottom: 6px;">№ заказа</label>
@@ -612,7 +624,7 @@ padding: 0 8px;
 <!-- КАЛЕНДАРЬ (Вместо Чаевых) -->
 <div id="calendar" class="content-block">
 <div class="container">
-<h2 style="background: var(--accent-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 16px;"><i class="fas fa-calendar-alt"></i> Календарь</h2>
+<h2 style="color: var(--accent-blue); margin-bottom: 16px;"><i class="fas fa-calendar-alt"></i> Календарь</h2>
 <div class="calendar-header">
     <button class="calendar-nav-btn" onclick="changeMonth(-1)"><i class="fas fa-chevron-left"></i></button>
     <div style="font-size: 1.2rem; font-weight: 600;" id="calendarMonthYear"></div>
@@ -625,7 +637,7 @@ padding: 0 8px;
     <i class="fas fa-info-circle"></i> Легенда
 </div>
 <div style="display: flex; gap: 12px; flex-wrap: wrap; font-size: 0.85rem; color: var(--text-muted);">
-    <div style="display:flex; align-items:center; gap:6px;"><div style="width:12px; height:12px; border-radius:50%; background:var(--accent-gradient);"></div> Отработано</div>
+    <div style="display:flex; align-items:center; gap:6px;"><div style="width:12px; height:12px; border-radius:50%; background:rgba(0, 114, 255, 0.85);"></div> Отработано</div>
     <div style="display:flex; align-items:center; gap:6px;"><div style="width:12px; height:12px; border-radius:50%; border:1px solid var(--accent-red);"></div> Выходной/Праздник</div>
     <div style="display:flex; align-items:center; gap:6px;"><div style="width:12px; height:12px; border-radius:50%; border:1px solid var(--accent-solid);"></div> Сегодня</div>
 </div>
@@ -634,7 +646,7 @@ padding: 0 8px;
 <!-- Статистика -->
 <div id="stats" class="content-block">
 <div class="container">
-<h2 style="background: var(--accent-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 16px;"><i class="fas fa-chart-bar"></i> Общая статистика</h2>
+<h2 style="color: var(--accent-blue); margin-bottom: 16px;"><i class="fas fa-chart-bar"></i> Общая статистика</h2>
 <div class="progress-title">
 <i class="fas fa-ruler-horizontal"></i> Погонные метры
 </div>
@@ -689,6 +701,7 @@ padding: 0 8px;
 <div class="panel-item" data-target="calendar">
 <i class="fas fa-calendar-alt"></i>
 <span>Календарь</span>
+<div class="new-badge">NEW</div>
 </div>
 <div class="panel-item" data-target="stats">
 <i class="fas fa-chart-bar"></i>
